<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_options"
        android:title="@string/menu">

        <menu>
            <item
                android:id="@+id/menu_report"
                android:icon="@drawable/ic_report"
                android:title="@string/report" />

            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_setting"
                android:title="@string/settings" />


            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />


        </menu>


    </item>


</menu>